--- a/HackingProjekt/appsettings.json
+++ b/HackingProjekt/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "HackingProjektContext": "Server=(localdb)\\mssqllocaldb;Database=HackingProjekt.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "HackingProjektContext": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=HackingProjekt.Data;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
